--- a/angular.json
+++ b/angular.json
@@ -120,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "angular-exercise-eight"
+    }
+  },
+  "defaultProject": "angular-exercise-eight",
+  "cli": {
+    "analytics": false
+  }
 }
